# Job-Recommendation-System

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
NER/: README.md  ner_model.py  ner_model_result.json  ner_rule.py  ner_rule_result.json  test.py
NER/models/bert4ner/: README.md  config.json  model.safetensors  model_args.json
data_pipeline/: config.py  main.py
data_pipeline/crawler/: __init__.py  jobsdb.py  liepin.py  zhaopin.py
datasets/data_collect_result/: README.md
datasets/data_collect_result/interim/: jobs_cleaned.json
datasets/data_collect_result/raw/: jobs_raw.json
datasets/extraction_result/: README.md  final_kg_triplets.json  step1_rule_results.json  step2_syntax_results.json
datasets/knowledge_graph_result/extraction_result/: llm_results.json  step3_semantic_results.json
datasets/knowledge_graph_result/ned_result/: README.md  llm_direct_mapping.json  llm_direct_result.json  llm_direct_summary.json  ned_result.json  pipeline_summary.json  step1_preprocessed.json  step2_rule_matched.json  step3_fuzzy_clustered.json  (+1 more)
datasets/processed/: jobs.json
docs/: project-report.md
frontend/: index.html
kg/: __init__.py  api.py  config.py  disambiguation.py  graph.py  models.py  repository.py  service.py  taxonomy.py
kg/ned/: README.md  llm_direct.py  main.py  traditional.py
kg/relation_extract/: README.md  relation_extract.py  relation_llm.py
scripts/: create_knowledge_graphy.py  import_neo4j.py
tests/: test_api.py  test_disambiguation.py  test_graph.py  test_taxonomy.py
(+4 files in other folders)
