[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-recommendation-system"
version = "1.0.0"
description = "A native Neo4j-based knowledge graph job recommendation system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "neo4j>=5.26",
  "pydantic>=2.9",
  "python-dotenv>=1.0",
  "selenium>=4.0",
  "webdriver-manager>=4.0",
  "pyquery>=1.4",
  "lxml>=4.9",
  "loguru>=0.7.2",
]

[tool.setuptools]
packages = ["kg", "kg.ned", "kg.relation_extract", "data_pipeline", "data_pipeline.crawler"]
